feat: add zgc-coh-on combination and P13 virtual-threads profile
- Add zgc-coh-on flag combination (ZGC + CompactObjectHeaders) to BenchmarkPlan
- Add P13-virtual-threads profile with tfl4-ek-bench:jvm-vt image
- Add Dockerfile.virtual-threads (eclipse-temurin:25-jre + SPRING_THREADS_VIRTUAL_ENABLED=true)
- Add Dockerfile.virtual-threads.with-ek (EBICS variant)
- Update Javadoc counts: 32->34 configs, 12->13 profiles, 8->9 combinations
- Fix all tests in BenchmarkPlanTest, BenchCliTest, DockerImageBuilderTest
- Update devops-interview.tex: zgc-coh-on row, P13 row, 32->34 in intro text
- All 457 tests pass